# named-pipes

./: .gitignore  LICENSE  README.md  Setup.hs  default.nix  hie.yaml  named-pipes.cabal
.github/workflows/: release.yml  tests.yml
examples/: named-pipes-read.hs  named-pipes-write.hs
nix/: sources.json
src/System/: NamedPipe.hs
src/System/NamedPipe/: Internal.hs
src/System/NamedPipe/Internal/: Posix.hs  Windows.hs
test/: Main.hs  cabal.project  named-pipes-test.cabal
