cabal-version: 2.2
name:          named-pipes-test
version:       0.0.0.0
synopsis:      POSIX named pipes (FIFO files)
license:       BSD-2-Clause
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2020 Peter J. Jones
homepage:      https://github.com/pjones/named-pipes
bug-reports:   https://github.com/pjones/named-pipes/issues
category:      Web
build-type:    Simple

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-name-shadowing -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-home-modules
    -Widentities -Wmissing-export-lists -Wredundant-constraints

--------------------------------------------------------------------------------
common extensions
  default-extensions:
    OverloadedStrings
    ScopedTypeVariables

--------------------------------------------------------------------------------
common dependencies
  build-depends:
    , async             ^>=2.2
    , base              >=4.9  && <5
    , bytestring        ^>=0.10
    , named-pipes       ^>=0.0
    , pipes             ^>=4.3
    , pipes-bytestring  ^>=2.1
    , relude            ^>=0.7
    , stm               ^>=2.5

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

--------------------------------------------------------------------------------
executable named-pipes-test
  import:  options, extensions, dependencies
  main-is: Main.hs

--------------------------------------------------------------------------------
test-suite test
  import:  options, extensions, dependencies
  type:    exitcode-stdio-1.0
  main-is: Main.hs
